1. 使用Base64替换BASE64Decoder，以消除编译告警